# excelfred

./: LICENSE  README.md  excelfred.py  pyproject.toml
