[project]
name = "excelfred"
version = "0.1.3"
description = "Recreate Microsoft Excel formulas"
authors = [{ name = "SAMUEL RAJ P", email = "samuelraj239@email.com" }]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["numpy", "pandas","scipy"]
requires-python = ">=3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
